import { ApiProperty, ApiPropertyOptional } from '@nestjs/swagger';
import { 
  IsEmail, 
  IsNotEmpty, 
  IsString, 
  IsUUID, 
  IsOptional, 
  MinLength,
  IsDateString,
  IsUrl,
  Length,
  Matches,
  ValidateIf,
  IsArray,
  IsInt,
  Min
} from 'class-validator';

/**
 * Kenyan Phone Regex:
 * Supports: +254..., 254..., 07..., 01..., 02...
 */
export const KENYAN_PHONE_REGEX = /^(?:254|\+254|0)?((?:7|1|2)\d{8})$/;

/* ======================================================
   BASE SCHEMA (Shared update properties)
   This covers both identity (User) and metadata (Profile)
====================================================== */

export abstract class BaseUpdateProfileDto {
  @ApiPropertyOptional({ 
    description: 'The first name of the user',
    example: 'Jane' 
  })
  @IsOptional()
  @IsString()
  firstName?: string;

  @ApiPropertyOptional({ 
    description: 'The last name of the user',
    example: 'Doe' 
  })
  @IsOptional()
  @IsString()
  lastName?: string;

  @ApiPropertyOptional({ 
    description: 'The primary email address',
    example: 'jane.doe@pivota.com' 
  })
  @IsOptional()
  @ValidateIf((o) => o.email && o.email.trim() !== '')  
  @IsEmail()
  email?: string;

  @ApiPropertyOptional({ 
    description: 'Kenyan phone number in international or local format',
    example: '+254712345678' 
  })
  @IsOptional()
  // Add this: Only validate if the value is not null, not undefined, and not an empty string
  @ValidateIf((o) => o.phone !== '' && o.phone !== null && o.phone !== undefined)
  @Matches(KENYAN_PHONE_REGEX, { 
    message: 'Please provide a valid Kenyan phone number' 
  })
  phone?: string;

  @ApiPropertyOptional({ 
    description: 'A short professional or personal bio',
    example: 'Software Engineer based in Nairobi.' 
  })
  @IsOptional()
  @IsString()
  bio?: string;

  @ApiPropertyOptional({ 
    description: 'The biological gender identity',
    example: 'FEMALE',
    enum: ['MALE', 'FEMALE', 'OTHER']
  })
  @IsOptional()
  @IsString()
  gender?: string;

@ApiPropertyOptional({ 
    description: 'Date of birth in ISO 8601 format',
    example: '1995-05-15' // Simple YYYY-MM-DD works with IsDateString
  })
  @IsOptional()
  // Skip validation if the field is empty or contains only whitespace
  @ValidateIf((o) => o.dateOfBirth && o.dateOfBirth.trim() !== '')
  @IsDateString({}, { 
    message: 'dateOfBirth must be a valid ISO 8601 date string' 
  })
  dateOfBirth?: string;

  @ApiPropertyOptional({ 
    description: 'Government-issued National ID or Passport number',
    example: '32145678' 
  })
  @IsOptional()
  @IsString()
  nationalId?: string;
}

/* ======================================================
   PUBLIC GATEWAY DTOs (Own vs Admin)
====================================================== */

/**
 * Used by a user to update their own profile.
 * No userUuid needed here; it's pulled from the JWT.
 */
export class UpdateOwnProfileRequestDto extends BaseUpdateProfileDto {}

/**
 * Used by an Admin to update any profile.
 */
export class UpdateAdminProfileRequestDto extends BaseUpdateProfileDto {
  @ApiProperty({ 
    description: 'The unique system identifier (UUID) of the user to update',
    example: '550e8400-e29b-41d4-a716-446655440000'
  })
  @IsUUID()
  @IsNotEmpty()
  userUuid!: string;
}

/* ======================================================
   INTERNAL / gRPC DTOs
====================================================== */

export class UpdateFullUserProfileDto extends BaseUpdateProfileDto {
  @ApiProperty({ 
    description: 'The unique system identifier (UUID) of the target user',
    example: '550e8400-e29b-41d4-a716-446655440000'
  })
  @IsUUID()
  @IsNotEmpty()
  userUuid!: string;

  @ApiPropertyOptional({
    description: 'The public URL for the uploaded profile avatar generated by the gateway',
    example: 'https://cdn.pivota.com/profiles/u123/avatar.jpg'
  })
  @IsOptional()
  @IsUrl()
  profileImage?: string;
}

/* ======================================================
   CREATION DTOs (Auth & Profile)
====================================================== */

export class UserSignupRequestDto {
  @ApiProperty({ description: 'Legal first name', example: 'Jane' })
  @IsString()
  @IsNotEmpty()
  firstName!: string;

  @ApiProperty({ description: 'Legal last name', example: 'Doe' })
  @IsString()
  @IsNotEmpty()
  lastName!: string;

  @ApiProperty({ description: 'Unique email address for login', example: 'jane.doe@pivota.com' })
  @IsEmail()
  @IsNotEmpty()
  email!: string;

  @ApiPropertyOptional({ description: 'Valid Kenyan mobile number', example: '0712345678' })
  @IsOptional()
  @Matches(KENYAN_PHONE_REGEX)
  phone?: string;

  @ApiProperty({ 
    description: 'Secure password (min 8 characters)', 
    example: 'StrongPass@2026', 
    minLength: 8 
  })
  @IsString()
  @IsNotEmpty()
  @MinLength(8)
  password!: string;

  @ApiPropertyOptional({ 
    description: 'Identifier for the chosen subscription plan',
    example: 'premium-business' 
  })
  @IsString()
  @IsOptional()
  planSlug?: string;

  @ApiProperty({ 
    description: 'The 6-digit verification code sent to the user',
    example: '123456',
    minLength: 6,
    maxLength: 6
  })
  @IsString()
  @Length(6, 6)
  @IsNotEmpty()
  code!: string;
}

export class CreateUserRequestDto {
  @ApiProperty({ description: 'The UUID generated by the Auth service' })
  @IsUUID()
  @IsNotEmpty()
  userUuid!: string;

  @ApiProperty({ example: 'Jane' })
  @IsString()
  @IsNotEmpty()
  firstName!: string;

  @ApiProperty({ example: 'Doe' })
  @IsString()
  @IsNotEmpty()
  lastName!: string;

  @ApiProperty({ example: 'jane.doe@pivota.com' })
  @IsEmail()
  @IsNotEmpty()
  email!: string;

  @ApiPropertyOptional({ example: '+254700000000' })
  @IsOptional()
  @Matches(KENYAN_PHONE_REGEX)
  phone?: string;

  @ApiProperty({ description: 'Initial subscription plan', example: 'free-tier' })
  @IsString()
  @IsNotEmpty()
  planSlug!: string;
}


/* ======================================================
   SERVICE PROVIDER (CONTRACTOR) ONBOARDING
====================================================== */

/**
 * Public Gateway DTO: Used by the Frontend Wizard.
 * userUuid is omitted here as it's extracted from the JWT.
 */
export class OnboardIndividualProviderRequestDto {
  @ApiProperty({ 
    description: 'List of professional skills or services offered',
    example: ['Plumbing', 'Electrical Wiring', 'Leak Repair'] 
  })
  @IsArray()
  @IsString({ each: true })
  @IsNotEmpty({ each: true })
  specialties!: string[];

  @ApiProperty({ 
    description: 'Geographic regions or neighborhoods covered',
    example: ['Nairobi West', 'Langata', 'Karen'] 
  })
  @IsArray()
  @IsString({ each: true })
  @IsNotEmpty({ each: true })
  serviceAreas!: string[];

  @ApiProperty({ 
    description: 'Total years of professional experience in these fields',
    example: 5,
    minimum: 0
  })
  @IsInt()
  @Min(0)
  yearsExperience!: number;
}

/**
 * Internal / gRPC DTO: The command sent to UserService.
 */
export class OnboardProviderGrpcRequestDto extends OnboardIndividualProviderRequestDto {
  @ApiProperty({ 
    description: 'The unique identifier of the user becoming a provider' 
  })
  @IsUUID()
  @IsNotEmpty()
  userUuid!: string;
}

